# cmake_mfc_study

./: README.md
src/: CMakeLists.txt
src/LibMy/: CMakeLists.txt  LibMy.cpp  LibMy.h  LibMy.rc  LibMy.vcxproj  LibMy.vcxproj.filters  Resource.h  cpp.hint  stdafx.h  wsxlaserlinethree.cpp  wsxlaserlinethree.h
src/common/: CMakeLists.txt  libA.cpp  libA.h
src/src/: CMakeLists.txt  main.cpp
